[package]
name = "nosync"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "2.0.5"
anyhow = "1.0.102"
dotenvy = "0.15.7"
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk.git" }
notion-client = { git = "https://github.com/takassh/notion-client.git" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
